--- a/dissertation/bib.bib
+++ b/dissertation/bib.bib
@@ -503,5 +503,5 @@
   title={REST API Design Rulebook: Designing Consistent RESTful Web Service Interfaces},
   author={Masse, Mark},
   year={2011},
-  publisher={" O'Reilly Media, Inc."}
+  publisher={O'Reilly Media, Inc.}
 }
