--- a/dissertation/sections/00-abstract.tex
+++ b/dissertation/sections/00-abstract.tex
@@ -1,6 +1,6 @@
 \documentclass[../dissertation.tex]{subfiles}
 \begin{abstract}
 
-Visualising networks with thousands of nodes and edges in a browser causes both developers and users numerous difficulties. Challenges include the high amount of bandwidth and  computational power required to render a massive network, along with the difficulty of getting useful information from the network after it is rendered, due to its complexity. After completing background research into the field, a systematic review of existing network visualisation software was conducted, and a network visualisation system was designed and implemented with the goal of visualising a massive amount of data quickly and easily. This system used a server to heavily manipulate and reduce the size of the network so that low powered clients could quickly view the information, which was done by removing as much unnecessary content as possible while keeping the full structure of the network in tact. Finally, the system was tested and its performance was evaluated, and it was confirmed that node bundling techniques improve performance and network visualisability.
+Visualising networks with thousands of nodes and edges in a browser causes both developers and users numerous difficulties. Challenges include the high amount of bandwidth and  computational power required to render a massive network, along with the difficulty of getting useful information from the network after it is rendered, due to its complexity. After completing background research into the field, a systematic review of existing network visualisation software was conducted, and a network visualisation system was designed and implemented with the goal of visualising a massive amount of data quickly and easily. This system used a server to heavily manipulate and reduce the size of the network so that low powered clients could quickly view the information, which was done by removing as much unnecessary content as possible while keeping the full structure of the network in tact. Finally, the system was tested and its performance was evaluated, and it was confirmed that node bundling techniques improve performance and result in the network being able to be visualised more easily.
 
 \end{abstract}
