--- a/dissertation/sections/01-introduction.tex
+++ b/dissertation/sections/01-introduction.tex
@@ -22,7 +22,7 @@ This project succeeded in many important ways:
 \begin{itemize}
     \item \textbf{A thorough review of the field of network visualisation.} This included analysing the field of visualisation, and gradually got more specific, covering network visualisation, visualisation of massive networks and finally visualising massive networks in a browser. SAS also provide a strong argument for why this project is necessary. These are covered in Chapter \ref{sec:review-of-field}. Additionally, research was conducted looking into how software handles visualising massive networks, which is covered in Chapter \ref{sec:research}.
     \item \textbf{A systematic review of existing network visualisation software.} This involved analysing, comparing and contrasting a wide range of software. Components tested included: ease of use of the software, how the software performed under load, and what support it had for displaying visualisations of massive networks. This review can be found in Chapter \ref{sec:systematic-review}.
-    \item \textbf{A system was designed, implemented and evaluated with the purpose of proving how reducing the size of networks can lead to both an increase in performance and the visualisability of the information.} The end result was a web wrapper that encapsulated the Tulip Python API, which could be called from a JavaScript library. This would remove many nodes and edges deemed unnecessary to understanding the network as a whole by certain algorithms. This resulted in massive performance increases and let the information be visualised far more easily. For a network with one thousand nodes, loading times were decreased by 99.997\% when both Node Pruning and Node Bundling based on number of edges was applied. This is covered in Chapter \ref{chap:design}, \ref{chap:impl} and \ref{chap:testing-eval}.
+    \item \textbf{A system was designed, implemented and evaluated with the purpose of proving how reducing the size of networks can lead to both an increase in performance and result in the information being visualised more easily.} The end result was a web wrapper that encapsulated the Tulip Python API, which could be called from a JavaScript library. This would remove many nodes and edges deemed unnecessary to understanding the network as a whole by certain algorithms. This resulted in massive performance increases and let the information be visualised far more easily. For a network with one thousand nodes, loading times were decreased by 99.997\% when both node pruning and node bundling based on number of edges was applied. This is covered in Chapter \ref{chap:design}, \ref{chap:impl} and \ref{chap:testing-eval}.
 \end{itemize}
 
 \end{document}
