--- a/dissertation/sections/02-motivation.tex
+++ b/dissertation/sections/02-motivation.tex
@@ -2,6 +2,7 @@
 \begin{document}
 
 \chapter{Motivation}
+\label{chap:motiv}
 
 There is limited research and development of software in regards to the visualisation of massive networks in a browser. A solution for companies who require network visualisation can be to use existing software (whether open source or with a license attached), or to develop their own software. SAS have developed their own network visualisation software (for example, the SAS product `Visual Investigator' \cite{sasvi}) which performs well for up to a few thousand nodes, but begins to operate more poorly when the number of nodes exceeds that - in relation to processing power, system memory and bandwidth. As a result, SAS, who explicitly support this project, are keen to find ways for larger networks to be visualised both with high performance (loading times are low and requirements on a user's machine are kept to a minimum) and high information throughput (the visualisation provides valuable information to the user).
 
